syntax = "proto3";

package locatorpb;

option go_package = "/grpc";

service IpcService {
  rpc InitLocator(InitLocatorRequest) returns (InitLocatorResponse) {}
  rpc GetLocator(GetLocatorRequest) returns (GetLocatorResponse) {}
  rpc EvaluateJs(EvaluateJsRequest) returns (EvaluateJsResponse) {}
}

message InitLocatorRequest {
  bytes config = 1;
}

message InitLocatorResponse {
  bool success = 1;
  string error = 2;
}

message GetLocatorRequest {
  string user_req = 1;
}

message GetLocatorResponse {
  string locator_str = 1;
  string error = 2;
}

message EvaluateJsRequest {
  string js_str = 1;
}

message EvaluateJsResponse {
  string result = 1;
}
